Bug 170762 - Kopete reports valid AOL screen names as invalid when attempting to add them to your buddy list
Summary: Kopete reports valid AOL screen names as invalid when attempting to add them ...
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: 0.60.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-09 19:45 UTC by Riskable
Modified: 2008-12-29 11:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Riskable 2008-09-09 19:45:32 UTC
Version:           0.60.1 (using KDE 4.1.1)
OS:                Linux
Installed from:    Ubuntu Packages

When trying to add a perfectly valid screen name to your AIM buddy list such as user@domain.com Kopete reports, "You must enter a valid AOL screen name".  This behaviour is incorrect.  The validation code should be modified to allow jabber-like addresses.

FYI:  I'm not sure when it started but AOL does allow connections via federated channels (such as Jabber/Gmail) to their chat network.  You can even use the Jabber protocol to connect to AIM if you use their XMPP gateway (xmpp.oscar.aol.com).

For reference, a buddy list downloaded from the server containing user@domain.com addresses works fine in Kopete.  The only thing that appears to be broken in this context is the validation code that prevents users from adding new addresses to the buddy list.
Comment 1 Roman Jarosz 2008-12-28 12:52:54 UTC
Could you tell me (mail me) exactly the AOL screen name that doesn't work because user@domain.com works.
Comment 2 Roman Jarosz 2008-12-29 11:42:37 UTC
SVN commit 902819 by rjarosz:

Relax AIM screen name validation. Only check if it isn't ICQ number.

BUG: 170762



 M  +2 -2      aim/ui/aimaddcontactpage.cpp  
 M  +2 -2      icq/ui/icqaddcontactpage.cpp  
 M  +1 -4      oscarprivacyengine.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=902819