Relax AIM screen name validation. Only check if it isn't ICQ number.

BUG: 170762


svn path=/trunk/KDE/kdenetwork/kopete/; revision=902819