protocols/oscar/icq/ui/icqaddcontactpage.cpp
@@ -99,8 +99,8 @@ bool ICQAddContactPage::validateData()
 	}
 	else if ( addUI->aimRadioButton->isChecked() )
 	{
-		QRegExp rx("^[A-Za-z][@.\\d\\s\\w]{2,15}$");
-		if ( !rx.exactMatch( addUI->aimEdit->text() ) )
+		QRegExp rx("^[0-9]*$");
+		if ( rx.exactMatch( addUI->aimEdit->text() ) )
 		{
 			KMessageBox::sorry( this, i18n("You must enter a valid AOL screen name."), i18n("ICQ Plugin") );
 			return false;
